# tonsai

./: README.md  pyproject.toml
configs/data/: tokenizer_sources.example.yaml  train_sources.example.yaml
configs/deepspeed/: zero2_h100.json
configs/model/: gpt2_500m.json
configs/train/: cpt_500m.yaml  gemma3_1b_cpt.yaml
scripts/: infer_gemma3.py  infer_gpt2.py  prepare_dataset.py  train_gemma3_cpt.py  train_gpt2.py  train_tokenizer.py
src/tonsai/: __init__.py
