[project]
name = "tonsai"
version = "0.1.0"
description = "Khmer-English LLM training toolkit (GPT-2 style, ~0.5B params)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.34.0",
  "datasets>=2.20.0",
  "deepspeed>=0.14.4",
  "huggingface-hub>=0.24.0",
  "numpy>=1.26.0",
  "pyyaml>=6.0.2",
  "sentencepiece>=0.2.0",
  "tokenizers>=0.19.1",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "wandb>=0.17.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0", "ipykernel>=6.29.0"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/tonsai"]
